[package]
name          = "parsel"
version       = "0.12.0"
edition       = "2018"
authors       = ["Árpád Goretity <h2co3@h2co3.org>"]
repository    = "https://github.com/H2CO3/parsel/"
homepage      = "https://h2co3.github.io/parsel/"
license       = "MIT"
readme        = "../README.md"
documentation = "https://docs.rs/parsel"
description   = "Zero-code parser generation by using AST node types as the grammar"
categories    = ["compilers", "parsing", "parser-implementations", "development-tools", "rust-patterns"]
keywords      = ["compiler", "parser", "generator", "syntax", "ast"]

[dependencies]
parsel_derive = { version = "0.12.0", path = "../parsel_derive" }
ordered-float = "3.6.0"
proc-macro2 = { version = "1.0.56", features = ["span-locations"] }
syn = { version = "2.0.15", features = ["extra-traits"] }
quote = "1.0.26"

[dev-dependencies]
anyhow = "1.0.66"
quickcheck = "1.0.3"
