[package]
name          = "parsel"
version       = "0.14.0"
edition       = "2021"
authors       = ["Árpád Goretity <h2co3@h2co3.org>"]
repository    = "https://github.com/H2CO3/parsel/"
homepage      = "https://h2co3.github.io/parsel/"
license       = "MIT"
readme        = "../README.md"
documentation = "https://docs.rs/parsel"
description   = "Zero-code parser generation by using AST node types as the grammar"
categories    = ["compilers", "parsing", "parser-implementations", "development-tools", "rust-patterns"]
keywords      = ["compiler", "parser", "generator", "syntax", "ast"]

[dependencies]
parsel_derive = { version = "0.14.0", path = "../parsel_derive" }
ordered-float = "4.2.0"
proc-macro2 = { version = "1.0.81", features = ["span-locations"] }
syn = { version = "2.0.60", features = ["extra-traits"] }
quote = "1.0.36"

[dev-dependencies]
anyhow = "1.0.82"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
